--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -90,6 +90,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-4-17-clash-node.htm">
+					<img src="/uploads/20240228/462333cdd7156cdfce9b23a70ece7cac.webp" alt="4月17日→18.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-4-17-clash-node.htm">
+					<h2>4月17日→18.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了日本、韩国、欧洲、加拿大、新加坡、香港、美国等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-4-16-free-shadowrocket-node.htm">
 					<img src="/uploads/20240228/572cca27916877c289a949f8bee620b0.webp" alt="4月16日→20.6M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接" class="img-responsive" />
 				</a>
@@ -227,22 +243,6 @@
 					<h2>4月8日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</h2>
 				</a>
 				<p>这一次的节点更新覆盖了香港、韩国、日本、加拿大、美国、欧洲、新加坡等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-		<div class="welcome">
-		<div class="container">
-			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-4-7-clash-windows.htm">
-					<img src="/uploads/20240228/3503087554da3534b733d898ce4beb4e.webp" alt="4月7日→18.7M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接" class="img-responsive" />
-				</a>
-			</div>
-			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-4-7-clash-windows.htm">
-					<h2>4月7日→18.7M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</h2>
-				</a>
-				<p>这一次的节点更新覆盖了日本、韩国、加拿大、新加坡、香港、美国、欧洲等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
