--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -90,6 +90,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-4-11-shadowrocket-node.htm">
+					<img src="/uploads/20240228/17a9e01ded9e492cb2b2edefa16af20f.webp" alt="4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-4-11-shadowrocket-node.htm">
+					<h2>4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了日本、新加坡、加拿大、欧洲、香港、美国、韩国等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-4-10-free-clash-subscribe.htm">
 					<img src="/uploads/20240228/ba657eb869fd73b341be034765bf0ac4.webp" alt="4月10日→22.1M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接" class="img-responsive" />
 				</a>
@@ -227,22 +243,6 @@
 					<h2>4月2日→18M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</h2>
 				</a>
 				<p>这一次的节点更新覆盖了加拿大、香港、美国、韩国、日本、新加坡、欧洲等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-		<div class="welcome">
-		<div class="container">
-			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-4-1-clash-node.htm">
-					<img src="/uploads/20240228/3503087554da3534b733d898ce4beb4e.webp" alt="4月1日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接" class="img-responsive" />
-				</a>
-			</div>
-			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-4-1-clash-node.htm">
-					<h2>4月1日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</h2>
-				</a>
-				<p>这一次的节点更新覆盖了新加坡、韩国、加拿大、日本、欧洲、美国、香港等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
