--- a/free-nodes/2024-3-9-free-clash-subscribe.htm
+++ b/free-nodes/2024-3-9-free-clash-subscribe.htm
@@ -7,6 +7,7 @@
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="icon" href="/assets/addons/xcblog/img/clashgithub/favicon.ico" type="image/x-icon"/>
 <meta name="keywords" content="3月9日Clash订阅链接, SSR订阅, Shadowrocket订阅链接Clash Github演示站" />
 <meta name="description" content="3月9日节点订阅更新,Shadowrocket/SSR/Clash/V2ray免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了香港、美国、韩国、日本、欧洲、新加坡、加拿大等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
