--- a/free-nodes/2024-4-7-clash-windows.htm
+++ b/free-nodes/2024-4-7-clash-windows.htm
@@ -7,6 +7,7 @@
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="icon" href="/assets/addons/xcblog/img/clashgithub/favicon.ico" type="image/x-icon"/>
 <meta name="keywords" content="4月7日Clash订阅链接, SSR订阅, Shadowrocket订阅链接Clash Github演示站" />
 <meta name="description" content="4月7日节点订阅更新,V2ray/SSR/Clash/Shadowrocket免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了日本、韩国、加拿大、新加坡、香港、美国、欧洲等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
