--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -91,6 +91,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-4-6-free-clash.htm">
+					<img src="/uploads/20240228/7f7309e6b17f9cbb639a778e73fc546c.webp" alt="4月6日→21.7M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-4-6-free-clash.htm">
+					<h2>4月6日→21.7M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了新加坡、加拿大、美国、欧洲、日本、香港、韩国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-4-5-free-node-subscribe-links.htm">
 					<img src="/uploads/20240228/cf4b7d70d0b73f0bfc03a06c4aff020d.webp" alt="4月5日→22.2M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接" class="img-responsive" />
 				</a>
@@ -228,22 +244,6 @@
 					<h2>3月28日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接</h2>
 				</a>
 				<p>这一次的节点更新覆盖了新加坡、韩国、日本、欧洲、美国、香港、加拿大等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-		<div class="welcome">
-		<div class="container">
-			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-3-27-node-share.htm">
-					<img src="/uploads/20240228/819f1aade82ef2f65ccdf55abb283a16.webp" alt="3月27日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接" class="img-responsive" />
-				</a>
-			</div>
-			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-3-27-node-share.htm">
-					<h2>3月27日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接</h2>
-				</a>
-				<p>这一次的节点更新覆盖了香港、日本、欧洲、韩国、新加坡、加拿大、美国等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
