--- a/index.html
+++ b/index.html
@@ -116,6 +116,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-4-26-free-node-subscribe-links.htm">
+					<img src="/uploads/20240228/e257e01abd056413997dc08bd6b623fb.webp" alt="4月26日→19.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-4-26-free-node-subscribe-links.htm">
+					<h2>4月26日→19.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了新加坡、欧洲、香港、加拿大、日本、韩国、美国等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-4-25-free-node-subscribe.htm">
 					<img src="/uploads/20240228/e257e01abd056413997dc08bd6b623fb.webp" alt="4月25日→21.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接" class="img-responsive" />
 				</a>
@@ -413,22 +429,6 @@
 					<h2>4月7日→18.7M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</h2>
 				</a>
 				<p>这一次的节点更新覆盖了日本、韩国、加拿大、新加坡、香港、美国、欧洲等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-		<div class="welcome">
-		<div class="container">
-			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-4-6-free-clash.htm">
-					<img src="/uploads/20240228/7f7309e6b17f9cbb639a778e73fc546c.webp" alt="4月6日→21.7M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接" class="img-responsive" />
-				</a>
-			</div>
-			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-4-6-free-clash.htm">
-					<h2>4月6日→21.7M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接</h2>
-				</a>
-				<p>这一次的节点更新覆盖了新加坡、加拿大、美国、欧洲、日本、香港、韩国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
