--- a/free-nodes/page-4.htm
+++ b/free-nodes/page-4.htm
@@ -91,6 +91,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-4-7-clash-windows.htm">
+					<img src="/uploads/20240228/3503087554da3534b733d898ce4beb4e.webp" alt="4月7日→18.7M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-4-7-clash-windows.htm">
+					<h2>4月7日→18.7M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了日本、韩国、加拿大、新加坡、香港、美国、欧洲等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-4-6-free-clash.htm">
 					<img src="/uploads/20240228/7f7309e6b17f9cbb639a778e73fc546c.webp" alt="4月6日→21.7M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接" class="img-responsive" />
 				</a>
@@ -228,22 +244,6 @@
 					<h2>3月29日→18.2M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</h2>
 				</a>
 				<p>这一次的节点更新覆盖了新加坡、加拿大、韩国、美国、香港、欧洲、日本等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-		<div class="welcome">
-		<div class="container">
-			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-3-28-clash-windows.htm">
-					<img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="3月28日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接" class="img-responsive" />
-				</a>
-			</div>
-			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-3-28-clash-windows.htm">
-					<h2>3月28日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接</h2>
-				</a>
-				<p>这一次的节点更新覆盖了新加坡、韩国、日本、欧洲、美国、香港、加拿大等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
