--- a/free-nodes/page-7.htm
+++ b/free-nodes/page-7.htm
@@ -91,6 +91,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-3-8-free-shadowrocket-node.htm">
+					<img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-3-8-free-shadowrocket-node.htm">
+					<h2>3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了美国、韩国、日本、新加坡、欧洲、加拿大、香港等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-3-7-clash-windows.htm">
 					<img src="/uploads/20240228/7fe0a3254708abdaf06a53e4d29ef007.webp" alt="3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接" class="img-responsive" />
 				</a>
